# Prolog_BFS

./: .gitignore  CMakeLists.txt  CMakeLists.txt.native  CMakeLists.txt.wasm  FAQ.md  README.md  TODO.md  build.sh  build_native.sh  build_wasm.sh  catch.hpp  index.html  main.cpp  start_server.sh  wasm.cpp
src/: CMakeLists.txt
src/app_runner/: normal_mode.cpp  normal_mode.h  socket_mode.cpp  socket_mode.h
src/program_arguments/: parser.h
src/prolog/data/: rule.cpp  rule.h  term.cpp  term.h
src/prolog/data/data_types/: atom.h  constant.h  functor.h  number.h  variable.h
src/prolog/parser/: parser.cpp  parser.h
src/util/: inclusive_range.h  named_type.h  vector_util.h
src/wam/bfs_organizer/: bfs_organizer.cpp  bfs_organizer.h
src/wam/bfs_organizer/data/: result.cpp  result.h  runtime_statistics.cpp  storage.h
src/wam/bfs_organizer/util/: bfs_util.cpp  bfs_util.h  read_program_code.cpp  read_program_code.h  substitution_util.cpp  substitution_util.h
src/wam/built_in_predicates/: append.cpp  append.h  equals.cpp  equals.h  not_equals.cpp
src/wam/built_in_predicates/arithmetic/: is.cpp  is.h
src/wam/compiler/: built_in_pred_comp.cpp  built_in_pred_comp.h  compiler.cpp  compiler.h
src/wam/compiler/built_in_predicates/: built_in_pred_comp.cpp  built_in_pred_comp.h
src/wam/compiler/checks/: redefinition_of_built_in_pred.cpp  undefined_var.cpp
src/wam/compiler/error/: compiler_error.h  compiler_error_type.h  error_type.h
src/wam/compiler/parser/: base_grammar.h  parser.h  parser_error.h  program_grammar.h  query_grammar.h  util.cpp  util.h
src/wam/compiler/util/: data_enums.cpp  data_enums.h  node.cpp  node.h  node_iteration.h  node_util.cpp  node_util.h  seen_register.cpp  seen_register.h
src/wam/config/: config.h
src/wam/data/: compiled_atom.cpp  compiled_atom.h  environment.h  functor_view.h  heap_reg.cpp  heap_reg.h  heap_reg_with_i.h  heap_tag.h  regist.cpp  regist.h  rule.h  source_code_info.h  term_code.h  var_binding.cpp  var_binding.h  var_heap_substitution.h  var_reg_substitution.h  var_substitution.cpp  var_substitution.h
src/wam/executor/: Excecutor.cpp  Excecutor.h  executor.cpp  executor.h
src/wam/executor/util/: exec_state.h  heap.h  mode.h
src/wam/instructions/: instructions.cpp  instructions.h
src/wam/instructions/util/: instructions_util.cpp  instructions_util.h
src/wam/parser/: parser.cpp  parser.h
src/wam/parser/util/: data_enums.h  node.cpp  node.h  node_iteration.cpp  node_iteration.h  reg_func_counts.h  seen_register.h
src/wam/runtime_errors/: err_handling.cpp  err_handling.h
src/wam/visual/: substitution_util.cpp  substitution_util.h  unification_tree.cpp  unification_tree.h
src/wam/visual/unification_tree/: query_node.cpp  query_node.h  rule_binding.cpp  rule_bindings.h  unification_tree.cpp  (+3 more)
src/wasm/: compiler_error_binding.cpp  memory_usage.cpp  parser_error_binding.cpp  result.cpp  runtime_error.cpp  wasm.cpp
src/wasm/result/: runtime_statistics.cpp
src/wasm/unification_tree/: query_node.cpp  var_binding_node.cpp
test/: CMakeLists.txt  arith_no_ints.cpp  arithmetic.cpp  arithmetic_test.cpp  bfs_organizer_L1_test.cpp  bfs_organizer_L2_test.cpp  bfs_organizer_L3_test.cpp  bfs_organizer_list_test.cpp  bfs_organizer_test.cpp  integers.cpp  list_test.cpp  p1_test.cpp  p3-0_test.cpp  p3-1_test.cpp  p4-0_test.cpp  p4-1_test.cpp  p4-2_test.cpp  p5-0_test.cpp  p5-1_test.cpp  p5-2_test.cpp  parser_test.cpp  practical5_test.cpp  practical5_test_list.cpp  test_util.cpp  test_util.h  util.h  v1_test.cpp  visual.cpp  weg_laenge_test.cpp
test/bfs_organizer/: validate_test.cpp
test/built_in_preds/: append.cpp  equals_pred.cpp  not_equals_pred.cpp
test/built_in_preds/arithmetic/: is.cpp
test/parser/: general.cpp  program.cpp  query.cpp
test/unification_tree/: tree_int_test.cpp  tree_test.cpp
test/various/: heap_reg_size_test.cpp  time_limit_test.cpp
wasm/: CMakeLists.txt  compiler_error_binding.cpp  runtime_error.cpp  test.cpp  wasm.cpp
wasm/result/: result.cpp  runtime_statistics.cpp
wasm/unification_tree/: query_node.cpp  var_binding_node.cpp
(+103 files in other folders)
